--- a/app/index.html
+++ b/app/index.html
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="chart-styles.css"></link>
   </head>
   <body>
-
-    <div id="app-container"></div>
-
-    <script type="text/javascript" src="bundle.js"></script>
+    <script type="text/javascript" src="charts.js"></script>
+    <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
