--- a/app/index.html
+++ b/app/index.html
@@ -5,10 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title> Telegram Charts, Stage 2</title>
-    <link rel="stylesheet" href="chart-styles.css"></link>
+    <link rel="stylesheet" href="./chart-styles.css"></link>
   </head>
   <body>
-    <script type="text/javascript" src="charts.js"></script>
-    <script type="text/javascript" src="index.js"></script>
+
+    <div id="app-container"></div>
+
+    <div class="button-container">
+      <button type="button" id="mode" name="mode">Switch to Night Mode</button>
+    </div>
+
+    <script type="text/javascript" src="./charts.js"></script>
+    <script type="text/javascript" src="./index.js"></script>
   </body>
 </html>
